crates/wgso/tests/cases_invalid/unknown_imports/.expected
error: file at './tests/cases_invalid/unknown_imports/inner/unknown.wgsl' does not exist
 --> ./tests/cases_invalid/unknown_imports/root.wgsl:1:2
  |
1 | #import inner.unknown
  |  ^^^^^^^^^^^^^^^^^^^^
  |